@@ -309,6 +309,14 @@ TCLIQUE_WEIGHT tcliqueColoring(
       assert(V[i] <= Vadj[adjidx]); /* Vadj is a subset of V */
       if( V[i] == Vadj[adjidx] )
       {
+         /* node is adjacent to itself, but we do not need to color it again */
+         if( i == nodeVindex )
+         {
+            /* go to the next node in Vadj */
+            adjidx++;
+            continue;
+         }
+
          debugMessage("     nodeVindex=%d, node=%d, weight=%d, satdegold=%d  ->  ", 
             i, V[i], weights[V[i]], gsd[i].satdeg); 
                
@@ -520,23 +528,18 @@ TCLIQUE_WEIGHT tcliqueColoring(
          tmpitem = item->next;                  
          BMSfreeChunkMemory(mem, &item);       
          item = tmpitem;                        
-      }                                     
-   }
-   assert((workclique == clique) != (currentclique == clique));
-   
-   /* free data structures of neighbor colorinterval of all nodes; note that this needs to be done in a separate
-    * for-loop, since the above for-loop only covers i = 0,...,nV-2
-    */
-   for( i = 0 ; i < nV; i++ )
-   {
-      item = gsd[i].lcitv;
+      }
+
+      /* free data structure of neighbor colorinterval of node just colored */
+      item = gsd[nodeVindex].lcitv;
       while( item != NULL )
       {
-         tmpitem = item->next;
-         BMSfreeChunkMemory(mem, &item);
-         item = tmpitem;
+         tmpitem = item->next;                  
+         BMSfreeChunkMemory(mem, &item);       
+         item = tmpitem;                        
       }
    }
+   assert((workclique == clique) != (currentclique == clique));
 
    /* update maximum weight clique found so far */
    if( weightcurrentclique > *weightclique )
